# player_scoreboard_api

./: .releaserc.json  README.md  pyproject.toml
.github/workflows/: codeql.yml
src/player_scoreboard_api/: __init__.py  __main__.py  application.py  container.py  version.py
src/player_scoreboard_api/api/: __init__.py  responses.py
src/player_scoreboard_api/api/health/: __init__.py  response.py
src/player_scoreboard_api/api/player/: __init__.py  input.py  response.py
src/player_scoreboard_api/model/: game.py  player.py  score.py
src/player_scoreboard_api/service/: health.py  player.py  player_service.py
