[tool.poetry]
name = "player-scoreboard-api"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "player_scoreboard_api", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"

[tool.poetry.group.test.dependencies]
pylint = "^2.15.3"
flake8 = "^5.0.4"
flake8-pylint = "^0.1.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
pylance = "^0.1.2"
flake8 = "^5.0.4"
flake8-pylint = "^0.1.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
poetry = "^1.2.1"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
